--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,9 +1,12 @@
+{% load bootstrap4 %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    {% bootstrap_css %}
 </head>
 <body>
     <h1>Index</h1>
